--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#6200EE"  # Example Material Purple
-backgroundColor="#FFFFFF" # White background
-secondaryBackgroundColor="#F0F2F6" # Light gray for sidebar/expanders
-textColor="#262730" # Dark text
+primaryColor="#6200ee"
+backgroundColor="#1d1d33"
+secondaryBackgroundColor="#12121a"
+textColor="#ffffff"
 font="sans serif" # Or "Roboto", "Lato", etc. (ensure font is available)
