--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#6200ee"
+primaryColor="#9A55FD"
 backgroundColor="#1d1d33" # Dark main background
 secondaryBackgroundColor="#2E2E4A" # Slightly lighter for cards, sidebar, etc.
 textColor="#ffffff"
